syntax = "proto3";
option java_package = "grpc";

message CurrencyRateRequest{
  string request = 1;
}

message CurrencyRateResponse{
  string response = 1;
}

message RangeCurrencyRateRequest{
  string request = 1;
}

message RangeCurrencyRateResponse{
  string response = 1;
}

message emptyRequest{
  string request = 1;
}

message ListCurrencyResponse{
  string response = 1;
}

service RateService{
  rpc getCurrentCurrencyRate(CurrencyRateRequest) returns(CurrencyRateResponse);
  rpc getRangeCurrencyRate(RangeCurrencyRateRequest) returns(RangeCurrencyRateResponse);
  rpc getCurrencyList(emptyRequest) returns(ListCurrencyResponse);
}